updated README and downgraded versioning, see README for an explanation.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "csv-geocoder",
-    "version": "1.0.0-beta",
+    "version": "0.5.0",
     "description": "batch geocode addresses, csv in another csv out",
     "preferGlobal": true,
     "bin": {
