started implementing osm provider

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 GOOGLE_API_KEY=your_api_key_here
 PROVIDER_BASE_URI=https://maps.googleapis.com/maps/api/geocode/json
 REQ_FREQUENCY=1200
+OSM_API_KEY=your_api_key_here
+OSM_BASE_URI=http://nominatim.openstreetmap.org/search?q=
